# Firebase-Admin-SDK

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  deny.toml  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title-lint.yml  release-plz.yml  scheduled-audit.yml
examples/: create_custom_token.rs  emulator_quickstart.rs  manage_users.rs  send_message.rs  session_cookie_login_flow.rs  verify_id_token.rs
src/: error.rs  lib.rs
src/auth/: client.rs  error.rs  mod.rs  mode.rs  token_provider.rs
src/auth/custom_token/: mod.rs  signer.rs
src/auth/id_token/: claims.rs  jwks.rs  mod.rs  verifier.rs
src/auth/identity_toolkit/: endpoints.rs  mod.rs  requests.rs
src/auth/session_cookie/: certs.rs  create.rs  mod.rs  verify.rs
src/auth/users/: mod.rs  model.rs  operations.rs  query.rs
src/core/: credentials.rs  error.rs  http.rs  mod.rs  project.rs
src/messaging/: client.rs  error.rs  message.rs  mod.rs  token_provider.rs
src/messaging/fcm_v1/: endpoints.rs  mod.rs  operations.rs  requests.rs
tests/: emulator_users.rs
tests/fixtures/: test_cert.pem  test_private_key.pem  test_public_key.pem
