[package]
name = "firebase-admin"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Firebase Admin RS Contributors"]
description = "An open-source Firebase Admin SDK for Rust, starting with Authentication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/USERNAME/firebase-admin-rs"
documentation = "https://docs.rs/firebase-admin"
readme = "README.md"
keywords = ["firebase", "auth", "authentication", "google", "jwt"]
categories = ["authentication", "api-bindings", "asynchronous"]

[lib]
doctest = true

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
thiserror = "1"
url = "2"
gcp_auth = { version = "0.12", optional = true }

[features]
default = ["emulator"]
emulator = []
# Not yet functional: AuthClientBuilder::application_default_credentials()
# currently returns an explicit "not yet implemented" error at request time.
# Tracked for a future release; kept off by default so the gcp_auth
# dependency isn't pulled in for consumers who don't need it yet.
application-default-credentials = ["dep:gcp_auth"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"

[[example]]
name = "verify_id_token"

[[example]]
name = "create_custom_token"

[[example]]
name = "manage_users"

[[example]]
name = "emulator_quickstart"
